--- a/loja-backend/src/main/resources/application.properties
+++ b/loja-backend/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 server.port=8081
-
 spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/loja
-
 spring.datasource.username=root
-
 spring.datasource.password=123456
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=fatecipiranga2023@outlook.com
+spring.mail.password=FreiJoao59
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.test-connection=false
